# yunexal-panel

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  setup.sh
src/: auth.rs  cloudflare.rs  compose.rs  db.rs  dns.rs  docker.rs  lib.rs  main.rs  password.rs  state.rs
src/db/: audit.rs  dns.rs  images.rs  mod.rs  ports.rs  servers.rs  settings.rs  users.rs
src/docker/: containers.rs  edit.rs  files.rs  images.rs  mod.rs  network.rs  stats.rs
src/handlers/: admin.rs  auth.rs  create.rs  dashboard.rs  dns.rs  files.rs  mod.rs  network.rs  servers.rs  templates.rs  ws.rs
static/: manifest.json  sw.js
static/css/: admin.css  base.css  console.css  dashboard.css  files.css  networking.css  new_server.css
static/js/: admin.js  console.js  dashboard.js  files.js  footer.js  networking.js  new_server.js  sidebar.js
templates/: _admin_coming_soon.html  _admin_header.html  _admin_modals.html  _admin_sidebar.html  _dashboard_topbar.html  _head_common.html  _mobile_topbar.html  _script_footer.html  _scripts_server.html  _server_sidebar.html  admin.html  admin_edit.html  console.html  edit.html  files.html  index.html  login.html  networking.html  new_server.html  server_card.html  server_list.html  settings.html
