[package]
name = "yunexal-panel"
version = "0.3.1"
edition = "2021"
default-run = "yunexal-panel"

[[bin]]
name = "yunexal-panel"
path = "src/main.rs"

[[bin]]
name = "yunexal-setup"
path = "src/bin/setup.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
axum = { version = "0.8.8", features = ["ws", "multipart"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
bollard = "0.20.2"
askama = "0.15.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dotenvy = "0.15.7"
serde_yaml = "0.9.34+deprecated"
rand = "0.10.0"
futures-util = "0.3.32"
dashmap = "6.1.0"
html-escape = "0.2.13"
urlencoding = "2.1.3"
axum-extra = { version = "0.12.5", features = ["cookie-private"] }
time = { version = "0.3.47", features = ["std"] }
tower-http = { version = "0.6.8", features = ["fs"] }
argon2 = { version = "0.5.3", features = ["std"] }
rust-embed = { version = "8.11.0", features = ["include-exclude"] }
axum-embed = "0.1.0"
reqwest = { version = "0.13.2", features = ["json"] }
flate2 = "1"
tar = "0.4"
rpassword = "7.4.0"
